Fixed overflowed sub-buttons on side-navigationbar

--- a/laravel/public/assets/css/elements/navigationbar.css
+++ b/laravel/public/assets/css/elements/navigationbar.css
@@ -135,7 +135,7 @@ navbar
 
 			.button-list-wrapper
 			{
-				margin-left: 13px;
+				padding-left: 13px;
 			}
 		}
 
@@ -218,7 +218,7 @@ navbar
 			align-items: flex-end;
 			height: 0;
 			opacity: 0;
-			margin-left: 0;
+			padding-left: 0;
 			width: 100%;
 			z-index: -1;
 
